create email sending

--- a/package.json
+++ b/package.json
@@ -5,21 +5,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/imronshoimov/Authorization-Graphql.git"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/imronshoimov/Authorization-Graphql/issues"
-  },
-  "homepage": "https://github.com/imronshoimov/Authorization-Graphql#readme",
   "dependencies": {
     "apollo-server": "^3.1.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "nodemailer": "^6.6.3"
   }
 }
