--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-server": "^3.1.2",
     "graphql": "^15.5.1",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "pg": "^8.7.1"
   }
 }
