--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "apollo-server": "^3.1.2",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "nanoid": "^3.1.25",
     "nodemailer": "^6.6.3",
     "pg": "^8.7.1"
   }
